objects/Contract_Administration__c.object
<CustomObject>
    <fields>
        <fullName>ASA_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ASA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Contracts</relationshipLabel>
        <relationshipName>Contract_Administrations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Contract Administrations</relationshipLabel>
        <relationshipName>Contract_Administrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Effective_Date__c</fullName>
        <formula>Case__r.Contract_Effective_Date__c</formula>
        <label>Contract Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>TEXT(Case__r.Negotiation_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_For_Legal_Review__c</fullName>
        <label>Date Submitted For Legal Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_President_Approval_Date__c</fullName>
        <label>Plan President Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Request from Sales &amp; Marketing, Draft</fullName>
                </value>
                <value>
                    <fullName>Sent to Sales &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Draft sent to Employer</fullName>
                </value>
                <value>
                    <fullName>Sales &amp; Marketing returns draft to Contract Admin</fullName>
                </value>
                <value>
                    <fullName>Internal HCSC SME Review</fullName>
                </value>
                <value>
                    <fullName>Submitted for Legal Review</fullName>
                </value>
                <value>
                    <fullName>Plan President Approval Received</fullName>
                </value>
                <value>
                    <fullName>Internal Employer Group Review</fullName>
                </value>
                <value>
                    <fullName>Final sent to Employer Group</fullName>
                </value>
                <value>
                    <fullName>Fully Executed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Date__c</fullName>
        <label>Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed Term</fullName>
                </value>
                <value>
                    <fullName>Evergreen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contract Administration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Account__c</columns>
        <columns>ASA_Signed__c</columns>
        <columns>Case__c</columns>
        <columns>Complexity__c</columns>
        <columns>Date_Submitted_For_Legal_Review__c</columns>
        <columns>Plan_President_Approval_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Term_Date__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Administrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>